--- a/POTD1/styles/main.css
+++ b/POTD1/styles/main.css
@@ -12,11 +12,18 @@
     color: goldenrod;
     text-align: center;
   }
-  #content .normal img:hover {          /* selector #1 */ 
-    border: 5px dotted red; 
-  }       
-  div#content > .normal img:hover {     /* selector #2 */
-    border: 2px solid silver;
-    border-radius: 10px; 
-    padding: 20px;
-  }  
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
