--- a/Assignment 2/styles/main.css
+++ b/Assignment 2/styles/main.css
@@ -23,3 +23,9 @@ body {
     position: absolute;
     left: 50%;
 }
+
+.question_block {
+    width: 100%;
+    height: 33%;
+    text-align: center;
+}
