--- a/Assignment 2/styles/main.css
+++ b/Assignment 2/styles/main.css
@@ -17,6 +17,11 @@ body {
     padding: 5%;
 }
 
+.custom-create-header {
+    text-align: center;
+    padding: %;
+}
+
 .vertical { 
     border-left: 5px solid  rgb(12, 14, 25);
     height: 100%;
@@ -49,18 +54,15 @@ body {
 }
 
 .create_game {
-    width: 100%;
+    width: 100% ;
     height: 8vh;
     text-align: center;
     vertical-align: middle;
     line-height: 6vh;
 }
 
-.big_label {
-    text-align: center !important;
-    vertical-align: middle !important;
-    height: 8vh !important;
-    line-height: 8vh !important;
+.big-label {
+    text-align: center;
 }
 
 form {
