--- a/cs4640-angular/ng-http/src/app/app.component.html
+++ b/cs4640-angular/ng-http/src/app/app.component.html
@@ -1,132 +1,96 @@
-<!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<body [class.dark]="darkMode">
-<div class="container">
-  <h1>{{ title }}</h1>
-  <form #orderForm="ngForm" (ngSubmit)="confirmOrder(orderForm.value)">
-    <div class="mb-2">
-      <label>Name: </label>
-      <input 
-        required
-        minlength="3"
-        #name="ngModel"
-        [class.is-invalid]="(name.invalid && name.touched)"
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-        [(ngModel)]="orderModel.name" 
-      type="text" class="form-control" name="name">
-      <small class="text-danger" [class.d-none]="name.valid || name.untouched">
-        Name is required and must be at least 3 characters
-      </small>
-    </div>
-  
-    <div class="mb-2">
-      <label>Email: </label>
-      <input 
-        required
-        pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
-        #email="ngModel"
-        [class.is-invalid]="(email.invalid && email.touched)"
+<body>
 
-        [(ngModel)]="orderModel.email" 
-        type="email" class="form-control" name="email">
-        <small class="text-danger" [class.d-none]="email.valid || email.untouched">
-          Email is required and must be properly formatted
-        </small>
-    </div>
-  
-    <div class="mb-2">
-      <label>Phone: </label>
-      <input 
-        required
-        pattern="^\d{10}$"
-        #phone="ngModel"
-        [class.is-invalid]="(phone.invalid && phone.touched)"
-
-        [(ngModel)]="orderModel.phone" 
-        type="tel" class="form-control" name="phone">
-        <small class="text-danger" [class.d-none]="phone.valid || phone.untouched">
-          Phone number is required and must be 10 digits
-        </small>
-    </div>
-   
-    <div class="mb-2">
-      <select 
-        required
-        #drink_option="ngModel"
-        [class.is-invalid]="(drink_option.invalid && drink_option.touched)"
-        
-        [(ngModel)]="orderModel.drink" 
-        class="form-select bg-info" name="drink_option">
-        <option 
-        
-        value="">What would you like to drink? </option>
-        <option *ngFor="let item of drinks" >{{ item }}</option>
-      </select>
-      <small class="text-danger" [class.d-none]="drink_option.valid || drink_option.untouched">
-        Please select your drink
-      </small>
-    </div>
-    
-  
-    <div class="form-group">
-      <label>Hot or cold?</label>
-      <div class="form-check">
-        <input 
-        required
-        #tempPreference="ngModel"
-        [class.is-invalid]="(tempPreference.invalid && tempPreference.touched)"
-        [(ngModel)]="orderModel.tempPreference" 
-        class="form-check-input" type="radio" name="tempPreference" value="hot">
-        <label class="form-check-label">Hot</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="tempPreference" value="cold"> 
-        <label class="form-check-label">Cold</label>
-      </div>
-    </div>
-    
-    <div class="form-check mb-3">
-      <input 
-
-      [(ngModel)]="orderModel.sendText" 
-      class="form-check-input" type="checkbox" name="sendmsg">
-      <label class="form-check-label">Send me a text message when my order is ready </label>
-    </div>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.php"><img src="styles/uva.png" height="30" style="border: 5px"/></a>
       
-    <button 
-      [disabled]="!orderForm.form.valid"
-    (click)="onSubmit_OrderList(orderForm.value)" class="btn btn-primary">Place order</button>
-    <button (click)="changeDarkMode()" class="btn btn-secondary">Click to change mode</button>
-  </form>  
-  
-  <hr/>
-  <h3>Response from php</h3>
-  <p>{{ responsedata | json }}</p>
-  <!-- <ul *ngFor="let item of responsedata">
-    <li>{{ item.name }}, {{ item.email }}, {{ item.phone }}, {{ item.drink_option }}, 
-      {{ item.tempPreference }}, {{ item.sendmsg }}, {{ item.order_date }}</li>
-  </ul> -->
+      <span class="navbar-text text-light">    
+          <button id="modal-btn" type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal"> 
+          </button>
+      
+      </span> 
 
-  <div *ngFor="let order of responsedata">
-    <div *ngFor="let item of order">
-    <p>{{ item.name }}, {{ item.email }}, {{ item.phone }}, {{ item.drink }}, 
-      {{ item.tempPreference }}, {{ item.sendText }}, {{ item.order_date }}</p>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Update Profile</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+
+              <form method='GET' action='#'>
+                <div class="modal-body">
+                  <div class="mb-3">
+                    <label for="modal-first-name" class="form-label">First Name</label>
+                    <input required type="text" class="form-control" name="modal-first-name" id="modal-first-name" value="">
+                  </div>
+                  <div class="mb-3">
+                    <label for="modal-last-name" class="form-label">Last Name</label>
+                    <input required type="text" class="form-control" name="modal-last-name" id="modal-last-name" value="">
+                  </div>
+                  <div class="mb-3">
+                    <label for="modal-email" class="form-label">Email</label>
+                    <input required type="email" class="form-control" name="modal-email" id="modal-email" value="">
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="modal-current-pwd" class="form-label">Current Password</label><br/>
+                    <input type="password" class="form-control" name="modal-current-pwd" id="modal-current-pwd">
+                  </div>
+                  <div class="mb-3">
+                    <label for="modal-new-pwd" class="form-label">New Password</label>
+                    <input type="password" class="form-control" name="modal-new-pwd" id="modal-new-pwd">
+                  </div>
+                  
+                </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <input type="submit" class="btn btn-primary" value="Save Changes">                
+                </div>
+              </form>
+
+
+            </div>
+          </div>
+        </div>
+
+     
+
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="nav ms-auto nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" id="homepage-tab" href="index.php">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id='create-tab' href="creategame1.php">Create</a>
+            </li>
+            
+          
+              <!-- <li class="nav-item">
+                <a class="nav-link" id='login-tab' href="logout.php">Sign Out</a>
+              </li> -->
+           
+            <li class="nav-item">
+                <a class="nav-link" id='login-tab' href="login.php">Sign In</a>
+            </li>
+       
+
+        </ul>
+      </div>
     </div>
-  </div>
+   </nav>
 
-  <hr/>
-  <h3>Order Confirmation</h3>
-  <i><font color="green">{{ confirm_msg }}</font></i>  <br>
-  Data submitted: 
-  <i><font color="green">Display the submitted order</font></i>
-  <hr/>
-  <b>orderList</b> {{ orderList | json}}
-
-  <hr/>
-  <b>from above form: </b>{{ orderForm.value | json}}
-  <p>{{ orderForm.value.name }}</p>
-  <hr/>
-  <b>from model: </b>{{ orderModel | json }}
-  
-  </div>
-  </body>
+</body>
