--- a/cs4640-angular/play-page/src/app/app.component.html
+++ b/cs4640-angular/play-page/src/app/app.component.html
@@ -103,7 +103,10 @@
    <form>
     <div class="container">
         <div class="container">
-            <div class="row">
+            <app-question></app-question>
+            <!-- <div class="row">
+                
+                <app-question></app-question>
                 <div class="col-md question_block">
                     <input type="submit" name="question_1" value="" placeholder="category 1 100 points"  />
                 </div>
@@ -119,7 +122,7 @@
                 <div class="col-md question_block">
                     <input type="text" name="question_5" value="" placeholder="category 1 500 points" />
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="container">
           <div class="row">
