--- a/cs4640-angular/ng-http3/src/app/app.component.css
+++ b/cs4640-angular/ng-http3/src/app/app.component.css
@@ -1,12 +1,12 @@
 .dark {
-    background-color: navy;
-    color: orange;
+    color: whitesmoke;
 }
 
-body { 
+body, html { 
     background-color: lavender;
     padding:0; 
     margin:0;
+    height: 100vh;
 }
 
 
