--- a/cs4640-angular/ng-http3/src/app/app.component.html
+++ b/cs4640-angular/ng-http3/src/app/app.component.html
@@ -50,18 +50,18 @@
         <ul class="nav ms-auto nav-pills nav-fill">
           <li class="nav-item">
             <a class="nav-link" id="homepage-tab"
-              href="http://localhost/github/cs4640/Assignment%203/index.php">Home</a>
+              href="http://cs4640jeopardygame.com">Home</a>
 
           </li>
           <li class="nav-item">
             <a class="nav-link" id='create-tab'
-              href="http://localhost/github/cs4640/Assignment%203/creategame1.php">Create</a>
+              href="http://cs4640jeopardygame.com/creategame1.php">Create</a>
           </li>
 
 
           <li class="nav-item">
             <a class="nav-link" id='login-tab'
-              href="http://localhost/github/cs4640/Assignment%203/login.php">Sign
+              href="http://cs4640jeopardygame.com/login.php">Sign
               In</a>
           </li>
 
@@ -109,14 +109,9 @@
           Password must be at least 8 characters
         </small>
       </div>
-
-      <!------------------------------------------>
-
       <button [disabled]="!userForm.form.valid" (click)="onSubmit(userForm.value)" class="btn btn-primary">Sign up</button>
       <button (click)="changeDarkMode()" class="btn btn-secondary">Change Theme</button>
     </form>
-
-
 
     <hr />
    <h1>Result</h1>
