--- a/cs4640-angular/ng-http3/src/app/app.component.html
+++ b/cs4640-angular/ng-http3/src/app/app.component.html
@@ -23,7 +23,7 @@
 <body [ngStyle]="{'background-color': darkMode ? 'Ivory' : (!darkMode ? 'lavender' : null) }">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="http://localhost/github/cs4640/Assignment%203/index.php"><img
+      <a class="navbar-brand" href="http://www.cs4640jeopardygame.com/index.php"><img
           src="../assets/images/uva.png" height="30" style="border: 5px" /></a>
 
 
@@ -50,18 +50,18 @@
         <ul class="nav ms-auto nav-pills nav-fill">
           <li class="nav-item">
             <a class="nav-link" id="homepage-tab"
-              href="http://localhost/github/cs4640/Assignment%203/index.php">Home</a>
+              href="http://www.cs4640jeopardygame.com">Home</a>
 
           </li>
           <li class="nav-item">
             <a class="nav-link" id='create-tab'
-              href="http://localhost/github/cs4640/Assignment%203/creategame1.php">Create</a>
+              href="http://www.cs4640jeopardygame.com/creategame1.php">Create</a>
           </li>
 
 
           <li class="nav-item">
             <a class="nav-link" id='login-tab'
-              href="http://localhost/github/cs4640/Assignment%203/login.php">Sign
+              href="http://www.cs4640jeopardygame.com/login.php">Sign
               In</a>
           </li>
 
